hard-gists/632e39a9b4dda391fe54/run.log
=== Docker Run Log for 632e39a9b4dda391fe54 ===
Started at: Mi 29. Okt 16:28:25 CET 2025

[2025-10-29 16:28:26] START: Running container for 632e39a9b4dda391fe54
[2025-10-29 16:28:26] SUCCESS: Container 3e541801445a5310d5e2e10ef3d056ab0ba08ee53492a4622c8131456a10324b started for 632e39a9b4dda391fe54
=== Container logs for 632e39a9b4dda391fe54 ===
  File "/snippet.py", line 370
    print "The selection changed"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 632e39a9b4dda391fe54 ===
[2025-10-29 16:28:28] INFO: Container 3e541801445a5310d5e2e10ef3d056ab0ba08ee53492a4622c8131456a10324b has stopped
